# Chelombus

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: publish.yml  test.yml
api/: index.html
backend/: Dockerfile  coord_manh_new.txt  find-cluster.py  requirements.txt
backend/app/: find_cluster.py
backend/templates/: app.py
benchmark/scripts/: 13_run_mqn_scale.py  14_write_mqn_scale_report.py  _mqn_scale_utils.py
chelombus/: __init__.py
chelombus/clustering/: PyQKmeans.py  _gpu_predict.py
chelombus/encoder/: encoder.py
chelombus/streamer/: data_streamer.py
chelombus/utils/: __init__.py  cluster_io.py  fingerprints.py  helper_functions.py  visualization.py
choosing-k/: index.html
clickhouse/: find_nn_dist.py  get_represenatives.py  nn_search.py  test.py
docs/: api.md  choosing-k.md  conf.py  getting-started.md  index.md  index.rst  modules.rst
dynamic_tmap/src/: fingerprint_calculator.py  tmap_generator.py
examples/: enamine_1B_clustering.ipynb  tutorial.ipynb
frontend/: nginx.conf  representatives_TMAP.html
getting-started/: index.html
lab/: README.md  distances.py
models/: paper_clusterer.joblib  paper_encoder.joblib
scripts/: assign_clusters.py  benchmark_1B_pipeline.py  benchmark_gpu_predict.py  benchmark_predict.py  calculate_fingerprints.py  cluster_smiles.py  fit_pqkmeans.py  generate_pqcodes.py  get_training_data.py  k_selection_gpu.py  run_pipeline.py  select_k.py  train_encoder.py
search/: search_index.json
tests/: test_cluster_io.py  test_clustering.py  test_data_streamer.py  test_encoder.py  test_fingerprints.py  test_integration.py  test_utils.py
tests/benchmark/: test_mqn_scale_utils.py
(+2 files in other folders)
