[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chelombus"
version = "0.1.0"
description = "Billion-scale molecular clustering and visualization using Product Quantization and nested TMAPs."
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Alejandro Flores", email = "afloresep01@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["cheminformatics", "clustering", "product-quantization", "molecular-fingerprints", "tmap"]
dependencies = [
  "numpy>=1.20.0",
  "pandas>=1.3.0",
  "rdkit>=2022.03",
  "tqdm>=4.60.0",
  "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
clustering = ["pqkmeans"]
visualization = ["tmap-silicon>=1.0.19", "pandarallel>=1.6.0", "faerun>=0.4.0"]
io = ["pyarrow>=10.0.0", "duckdb>=0.9.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]
all = ["pqkmeans", "tmap-silicon>=1.0.19", "pandarallel>=1.6.0", "faerun>=0.4.0", "pyarrow>=10.0.0", "duckdb>=0.9.0"]

[project.urls]
Homepage = "https://github.com/afloresep/chelombus"
Documentation = "https://chelombus.gdb.tools"
Repository = "https://github.com/afloresep/chelombus"

[project.scripts]
chelombus-tmap = "chelombus.utils.visualization:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chelombus*"]
